--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.0",
+    "@react-native-community/netinfo": "^9.4.1",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
     "@tradle/react-native-http": "^2.0.1",
+    "amazon-cognito-identity-js": "^6.3.1",
     "assert": "^1.5.0",
+    "aws-amplify": "^5.3.3",
     "aws-sdk": "latest",
     "body-parser": "latest",
     "browserify-zlib": "^0.1.4",
